feat: implement JWT refresh token endpoint, update d swagger-docs.json file
Added `/api/auth/refresh` endpoint to AuthController to allow stateless
